# AdventOfCode

./: .gitignore  README.md
2022/: README.md
2022/asm/: .gitignore  Makefile
2022/asm/src/: Makefile  common.s  day01.s  day01_p1.s  day01_p2.s  day02.s  day03.s  day04.s
2022/day01/asm/: common.s  day01_p1.s  day01_p2.s
2022/rust/: Cargo.toml
2022/rust/.cargo/: config.toml
2022/rust/src/: lib.rs
2023/: README.md
2023/rust/: Cargo.toml
2024/asm/src/: Makefile  common.s  day01.s
2024/cpp/src/: .bazelrc  compile_flags.txt
2024/cpp/src/lib/: BUILD.bazel  file_utils.cpp  file_utils.hpp  grid.cpp  grid.hpp  hash_utils.hpp  transform.hpp
2024/cpp/src/lib/numerical_recipes/: gaussj.cpp  nr.hpp  nr3.inc
